--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "lucide-react": "^0.542.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
